Corrected button alignment using django_user_agents

--- a/app/static/slider/css/style2.css
+++ b/app/static/slider/css/style2.css
@@ -6,7 +6,6 @@
     top: 0px;
     left: -25px;
     z-index: 0;
-    overflow: hidden;
     overflow-x:hidden;
 }
 .cb-slideshow:after {
